adjust height to stop text truncation (PT 122094789)

--- a/applications/primo/styles-imports/_login-bar.scss
+++ b/applications/primo/styles-imports/_login-bar.scss
@@ -10,7 +10,6 @@
     @include flexbox();
     justify-content: center;
     left: 0px;
-    height: 2em;
     width: 100%;
     padding: 10px 0px;
 
